Fix mobile spacing issue.

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -25,7 +25,7 @@ $table-text-align: left !default;
 $content-width:    750px !default;
 
 $on-palm:          600px !default;
-$on-laptop:        750x !default;
+$on-laptop:        750px !default;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
