--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -392,4 +392,8 @@ article {
     padding-top: $spacing-unit;
     padding-right: $spacing-unit*1.25;
     padding-left: $spacing-unit*1.25;
+    @include media-query($on-palm) {
+        padding-right: $spacing-unit/2;
+        padding-left: $spacing-unit/2;
+    }
 }
